@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.33
+ * @version 0.13.34
  */
 
 /* Breaks */
@@ -15,6 +15,7 @@
 @bg-darker:sienna;
 @bg-darkest: black;
 
+@text-close: firebrick;
 @text-dark: black;
 @text-disabled: gray;
 @text-doc-punc: sienna;
@@ -33,6 +34,9 @@
 @exception-bg: lightpink;
 @field-focus-outline: darkorange;
 @field-required: firebrick;
+@filter-bg-editor: gainsboro;
+@filter-bg-rule-status: lightpink;
+@filter-connector: gray;
 @form-bg-border-focus: seagreen;
 @input-border: gainsboro;
 @line-border: gray;
@@ -43,12 +47,12 @@
 @row-bg-highlight: lightpink;
 @row-bg-inactive: gainsboro;
 @scrollbar-fg: darkorange;
-@text-close: firebrick;
 @title-border: darkorange;
 
 /* Dimensions */
 @alert-min-width: 10rem;
 @alert-max-width: 18rem;
+@alert-info-max-width: 40rem;
 @checkbox-height: 1.25rem;
 @checkbox-width: 40px;
 @checkbox-width-knob: 20px;
@@ -65,6 +69,11 @@
 @field-row-gap: 0.5rem;
 @field-col-gap: 0.5rem;
 @filemanager-min-width: 10rem;
+@filter-editor-height: 400px;
+@filter-editor-width: 850px;
+@filter-editor-max-height: 800px;
+@filter-input-max-width: 8rem;
+@filter-rule-max-width: 20rem;
 @filter-values-height: 8rem;
 @form-min-width: 15rem;
 @form-max-width: 60rem;
@@ -87,6 +96,7 @@
 @nav-width-icon: 3.5rem;
 @nav-width-text: 6rem;
 @nav-panel-max-height: 32rem;
+@paragraph-max-width: 40rem;
 @select-min-width: 4rem;
 @select-max-width: 12rem;
 @select-option-min-width: 8rem;
